# matrix-iptv

./: .gitignore  .npmignore  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Gemini.md  README.md  WORKFLOW_SETUP.md  about.md  add_to_profile.ps1  build_output.txt  build_output2.txt  build_web.ps1  debug_dns.py  debug_redirect.py  debug_stream.py  enhancements.md  episode_nav_methods.txt  episode_pane.txt  github_deploy.ps1  index.html  install.ps1  install.sh  package.json  powershell_profile_snippet.ps1  prints.txt  rebuild.ps1  response.html  run.bat  scrum  series_api_additions.txt  series_info_test.txt  strong8k_auth.json  strong8k_live_cats.json  strong8k_mls_ppv.json  strong8k_nba_ppv.json  strong8k_ppv_streams.json  strong_test_results.txt  test-matrix-iptv.bat  (+5 more)
.agent/: rules.md
.agent/workflows/: deploy.md  update_and_test.md  updateskills.md
.claude/agents/: fullstack_dev.md  product_manager.md  scrum_master.md  tester.md
.claude/commands/: scrum.md
.github/workflows/: 00-kanban-management.yml  01-issue-to-plan.yml  02-plan-to-implementation.yml  03-pr-review.yml  04-fix-bugs.yml  05-final-approval.yml  06-clarification-request.yml  07-human-review-checkpoint.yml  08-plan-revision.yml  release.yml
assets/: index.html
scripts/: benchmark_playlists.ps1  benchmark_playlists.py  build_web.ps1  check_host.py  debug_player.ps1  debug_vlc.ps1  install-binary.js  matrix-test.sh  proxy_server.js  release.js  test-matrix-iptv.sh
src/: api.rs  app.rs  cache.rs  cast.rs  config.rs  doh.rs  errors.rs  flex_id.rs  lib.rs  m3u_parser.rs  main.rs  matrix_rain.rs  onboarding.rs  parser.rs  player.rs  preprocessing.rs  scores.rs  setup.rs  sports.rs  state.rs  test_final_debug_2.txt  ui.rs  wasm_client.rs
src/content/: how_to_get_playlists.md  team_colors.md  what_is_iptv.md  what_is_this_app.md
src/handlers/: async_actions.rs  input.rs  mod.rs  mouse.rs
src/ui/: colors.rs  common.rs  footer.rs  form.rs  groups.rs  header.rs  home.rs  loading.rs  mod.rs  panes.rs  popups.rs  series.rs  sports.rs  utils.rs  vod.rs
tests/: american_mode_verification.rs  caching_test.rs  frontend_screens_test.rs  navigation_test.rs  playlist_verification.rs  test_geo_filter.rs  test_user_playlist.rs  verify_msnbc.rs
