[package]
name = "matrix-iptv"
version = "4.0.1"
edition = "2021"

[lib]
name = "matrix_iptv_lib"
crate-type = ["cdylib", "rlib"]

[features]
default = []
chromecast = ["rust_cast", "mdns-sd"]

[dependencies]
ratatui = { version = "0.29.0", default-features = false }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
anyhow = "1.0.95"
futures = "0.3.31"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-tz = "0.10.4"
iana-time-zone = "0.1.64"
regex = "1.12.2"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
once_cell = "1.19"
rayon = "1.10"
fuzzy-matcher = "0.3"
zeroize = "1.7"
thiserror = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = "0.28.1"
tokio = { version = "1.42.0", features = ["full"] }
reqwest = { version = "0.12.9", default-features = false, features = ["json", "native-tls", "gzip", "brotli"] }
hickory-resolver = { version = "0.24", features = ["dns-over-https-rustls", "tokio-runtime"] }
reqwest-hickory-resolver = "0.1"
directories = "5.0.1"
tui-input = { version = "0.11.0", features = ["crossterm"] }
arboard = "3.4"
bincode = "1.3"
# Chromecast casting support (optional - requires OpenSSL on Windows)
rust_cast = { version = "0.18", optional = true }
mdns-sd = { version = "0.11", optional = true }



[target.'cfg(target_arch = "wasm32")'.dependencies]
tui-input = { version = "0.11.0", default-features = false }
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3.76", features = ["console", "Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "Element", "HtmlElement", "KeyboardEvent", "Performance", "Storage"] }
console_error_panic_hook = "0.1.7"
reqwest = { version = "0.12.9", default-features = false, features = ["json"] }
# getrandom is usually pulled by uuid/rand, handled by wasm-bindgen implicit? 
getrandom = { version = "0.2", features = ["js"] }
# tokio for wasm
tokio = { version = "1.42.0", features = ["rt", "macros", "sync", "time"] }
[dev-dependencies]
tokio = { version = "1.42.0", features = ["full"] }
